clean modularity